testsuite/tests/parser/should_compile/T19082.hs
{-# LANGUAGE PackageImports #-}

module Foo (String) where

import "base" Prelude hiding (String)

data String = String
